[package]
name = "test-results"
version = "0.1.1"
license = "MIT"
authors = ["EYHN <cneyhn@gmail.com>"]
description = "A series of utility macros for outputting testing results."
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/EYHN/test-results"
keywords = ["test", "testing"]
readme = "README.md"
exclude = [
    "assets/*"
]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
once_cell = "1.9.0"
